log
Wed Mar 16 19:59:23 HSP 2022: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1166421
Wed Mar 16 20:13:29 HSP 2022: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:57:13: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'createNode'
     Node* n createNode(dato);
             ^~~~~~~~~~
list.c:57:24: error: 'dato' undeclared (first use in this function)
     Node* n createNode(dato);
                        ^~~~
list.c:57:24: note: each undeclared identifier is reported only once for each function it appears in
list.c:58:5: error: 'n' undeclared (first use in this function)
     n->next = list->head;
     ^
Compilation failed
27559c7
Wed Mar 16 20:14:07 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:57:13: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'createNode'
     Node* n createNode(data);
             ^~~~~~~~~~
list.c:58:5: error: 'n' undeclared (first use in this function)
     n->next = list->head;
     ^
list.c:58:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
c06dffc
Wed Mar 16 20:15:30 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:57:16: error: 'n' undeclared (first use in this function)
     createNode(n);
                ^
list.c:57:16: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
0612717
Wed Mar 16 20:20:39 HSP 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:59:16: error: 'n' undeclared (first use in this function)
     createNode(n);
                ^
list.c:59:16: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
3239152
Wed Mar 16 20:21:08 HSP 2022: 
 list.c | 9 ---------
 1 file changed, 9 deletions(-)
 tests:  1|5
total_score: 10/70
9d29b98
Wed Mar 16 20:21:53 HSP 2022: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
dfc4f82
Wed Mar 16 20:22:30 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
8e4204c
Wed Mar 16 20:23:18 HSP 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
4c5b29c
Thu Mar 17 11:11:35 HSP 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
229c41a
Thu Mar 17 11:27:45 HSP 2022: 
 list.c | 18 +++++++++---------
 1 file changed, 9 insertions(+), 9 deletions(-)
In file included from list.c:3:0,
                 from test.c:5:
list.c: In function 'createNode':
list.c:24:12: error: 'new' undeclared (first use in this function)
     assert(new != NULL);
            ^
list.c:24:12: note: each undeclared identifier is reported only once for each function it appears in
In file included from test.c:5:0:
list.c:29:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
29c2885
Thu Mar 17 11:28:19 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createNode':
list.c:28:12: error: 'new' undeclared (first use in this function)
     return new;
            ^~~
list.c:28:12: note: each undeclared identifier is reported only once for each function it appears in
list.c:29:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
b578b7a
Thu Mar 17 11:28:38 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
919fd65
